[tool.poetry]
name = "create-token-and-send-algorand-task"
version = "0.1.0"
description = ""
authors = ["dolvin17 <101130252+dolvin17@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
